@@ -131,4 +131,13 @@
   <data name="epub-logo-color-book" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\epub-logo-color-book.ICO;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AboutBox_AboutBox_Default_settings_file_not_found" xml:space="preserve">
+    <value>Default settings file not found</value>
+  </data>
+  <data name="Default_Settings_File" xml:space="preserve">
+    <value>Default settings file: {0},  ({1})</value>
+  </data>
+  <data name="Log_Folder" xml:space="preserve">
+    <value>LOG folder: {0}</value>
+  </data>
 </root>
