@@ -8,6 +8,7 @@
 + Added new setting "FixCodeElements" in configuration file and new parameter "fixcodeformat:[0/1]" to control if [code] sections should be fixed
 + Added 2 new style classes for Title page "title_series" for series on title page and "title_authors" for authors on title page
 + Added display log function to GUI utility
++ Added display of settings file and log folder to the GUI utility About dialog
 * Changed to generate truly Flat ePubs 
 * Refactoring of the code to perform automatic internal relative paths resolving when constructing ePubs , instead of hard coded
 * Replaced <strike> element with <del> element for better XHTML compatibility
